Archive2/97/20238bdb64e6bb/output
main.cpp: In function 'int main()':
main.cpp:8:10: error: invalid conversion from 'int' to 'int*' [-fpermissive]
 int *y = x;
          ^
main.cpp:11:17: warning: format '%d' expects argument of type 'int', but argument 2 has type 'int*' [-Wformat=]
  printf("%d\n",y);
                 ^
main.cpp:14:15: warning: format '%d' expects argument of type 'int', but argument 2 has type 'int*' [-Wformat=]
  printf("%d",y);
               ^
